--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="contenido" class="contenido" style="display: none;">
         <h1>Mis XV</h1>
         <h1>DAYANA</h1>
-        <img src="cumpleanero.jpg" alt="Cumpleañero" class="foto-cumpleanero">
+        <img src="15 años.jpg" alt="Cumpleañero" class="foto-cumpleanero">
         <h2>Escucha la canción</h2>
 
         <audio controls>
